# PAE-2025

./: .gitignore  Makefile  README.md  RobotRouter.py  aStar.cpp  aStar.h  aStarProva  mainProvaAStar.cpp  websocket-server.js  websocketMessagesExamples.json  websocketMessagesSendedExamples.json
assignTasksToRobots/point/: point.hpp  testPoint.cpp
assignTasksToRobots/robot/: robot.cpp  robot.hpp  testRobot.cpp
backend/: CMakeLists.txt  Makefile  README.md
backend/src/: main.cpp
backend/src/POIs/: POI.h  POIType.h
backend/src/POIs/impl/: chargingBayPOI.h
backend/src/WebSocket/: MyWebSocket.cpp
backend/src/app/: App.cpp  App.h  AppAdapter.cpp  AppAdapter.h
backend/src/common/: InsertionResult.h  Map.cpp  Map.h  Point.h  Route.h  TaskAssignation.h
backend/src/controllers/: MapController.h  RobotController.h  TaskController.h
backend/src/controllers/impl/: MapControllerImpl.h  RobotControllerImpl.h  TaskControllerImpl.h
backend/src/robots/: Robot.h
backend/src/robots/states/: RobotState.h  StateType.h
backend/src/robots/states/impl/: StandByState.h  WorkingState.cpp  WorkingState.h
backend/src/services/: MapService.h  RobotService.h  ServiceFactory.h  TaskService.h
backend/src/services/impl/: MapServiceImpl.cpp  MapServiceImpl.h  RobotServiceImpl.cpp  RobotServiceImpl.h  ServiceFactoryImpl.h  TaskServiceImpl.cpp  TaskServiceImpl.h
backend/src/tasks/: Task.h
frontend/: README.md  package-lock.json  package.json
router/: RobotRouter.py
src/: main.cpp
test_websocket/: package-lock.json  package.json  websocket-server.js
(+41 files in other folders)
